tests/suite/snapshots/suite__check__tests__check__bad_multiple_return.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_multiple_return.xi:6:12]
   │
 6 │     return foo()
   ·            ──┬──  
   ·              ╰──── Not a single expression type
───╯

