tests/suite/snapshots/suite__check__tests__check__bad_null_3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_null_3.xi:6:14]
   │
 6 │     a: A[] = {null, new B}
   ·     ───┬──   ──────┬──────  
   ·        ╰──────────────────── Expected A[] because of this
   ·                    │        
   ·                    ╰──────── Expected A[] but found B[]
───╯

