tests/suite/snapshots/suite__check__tests__check__bad_null_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_null_4.xi:6:26]
   │
 6 │     a: A[][] = {{new A}, null}
   ·                 ───┬───  ──┬─  
   ·                    ╰─────────── Expected A[] because of this
   ·                            │   
   ·                            ╰─── Expected A[] but found null
───╯

