tests/suite/snapshots/suite__check__tests__check__bad_pa3_10.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_10.xi:2:9]
   │
 2 │ bar() { x:int, _ = foo() }
   ·         ────────┬───────  
   ·                 ╰───────── Initialization mismatch
───╯

