tests/suite/snapshots/suite__check__tests__check__bad_pa3_11.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_11.xi:2:28]
   │
 2 │ bar() { x:int, b:bool, _ = foo() }
   ·                ───┬──      ──┬──  
   ·                   ╰─────────────── Expected bool because of this
   ·                              │    
   ·                              ╰──── Expected bool but found int
───╯

